# clio

./: CLAUDE.md  Cargo.toml  PLAN.md  PRD.md  README.md  REQUIREMENTS.md  rustfmt.toml
.cargo/: config.toml
benches/: fetcher_benchmark.rs
data/: example_config.toml
src/: cli.rs  config.rs  database.rs  error.rs  fetcher.rs  lib.rs  main.rs  source.rs
src/source/: rss.rs
tests/: cli_integration.rs  common.rs  config_integration.rs  database_integration.rs  fetcher_integration.rs  source_integration.rs  source_proptest.rs
tests/fixtures/: duplicate_names_config.toml  empty_name_config.toml  empty_sources_config.toml  invalid_url_config.toml  large_config.toml  malformed_config.toml  malformed_rss.xml  missing_field_config.toml  rss_date_formats.xml  rss_with_entities.xml  sample_atom.xml  sample_atom_detailed.xml  sample_rss.xml  sample_rss_detailed.xml  valid_config.toml
